--- a/package.json
+++ b/package.json
@@ -23,5 +23,17 @@
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "@geist-ui/react": "^2.2.5",
+        "@radix-ui/react-dropdown-menu": "^2.1.2",
+        "@radix-ui/react-progress": "^1.1.0",
+        "@radix-ui/react-slot": "^1.1.0",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.1",
+        "geist": "^1.3.1",
+        "lucide-react": "^0.460.0",
+        "tailwind-merge": "^2.5.5",
+        "tailwindcss-animate": "^1.0.7"
     }
 }
