--- a/package.json
+++ b/package.json
@@ -26,9 +26,15 @@
     },
     "dependencies": {
         "@geist-ui/react": "^2.2.5",
+        "@radix-ui/react-accordion": "^1.2.1",
+        "@radix-ui/react-dialog": "^1.1.2",
         "@radix-ui/react-dropdown-menu": "^2.1.2",
         "@radix-ui/react-progress": "^1.1.0",
+        "@radix-ui/react-scroll-area": "^1.2.1",
+        "@radix-ui/react-separator": "^1.1.0",
         "@radix-ui/react-slot": "^1.1.0",
+        "@radix-ui/react-tabs": "^1.1.1",
+        "@radix-ui/react-tooltip": "^1.1.4",
         "class-variance-authority": "^0.7.0",
         "clsx": "^2.1.1",
         "geist": "^1.3.1",
